# email-agent

./: Cargo.toml  README.md  build.sh  run.sh
.meta/: project.json
src/: gmail.rs  main.rs
tests/: mcp_call.sh  test_analyze_labels.sh  test_list_labels.sh  test_protocol.sh  test_search_emails.sh
