[package]
name = "email-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "email-tool"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Gmail REST API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization / JSON-RPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OAuth2
oauth2 = "4"

# Utilities
anyhow = "1"
rand = "0.8"
futures = "0.3"
dirs = "5"
url = "2"
